# robot-arm-control

./: README.md
robot_arm/: CMakeLists.txt  package.xml
robot_arm/config/: controllers.yaml
robot_arm/launch/: robot_control.xml  robot_description.launch  world.launch
robot_arm/src/: arm_mover.cpp
robot_arm/srv/: GoToPosition.srv
robot_arm/urdf/: robot_arm.gazebo.xacro  robot_arm.xacro
